deploy: dd026c40467c7343c06a222e454e9bb77b373ea9

--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -15837,12 +15837,12 @@ references:
   commentId: T:MacroTools.Spells.Slipstream.SlipstreamPortalChannel
   fullName: MacroTools.Spells.Slipstream.SlipstreamPortalChannel
   nameWithType: SlipstreamPortalChannel
-- uid: MacroTools.Spells.Slipstream.SlipstreamPortalChannel.#ctor(unit,System.Int32,Point)
-  name: SlipstreamPortalChannel(unit, Int32, Point)
-  href: api-macroTools/MacroTools.Spells.Slipstream.SlipstreamPortalChannel.html#MacroTools_Spells_Slipstream_SlipstreamPortalChannel__ctor_unit_System_Int32_Point_
-  commentId: M:MacroTools.Spells.Slipstream.SlipstreamPortalChannel.#ctor(unit,System.Int32,Point)
-  fullName: MacroTools.Spells.Slipstream.SlipstreamPortalChannel.SlipstreamPortalChannel(unit, System.Int32, Point)
-  nameWithType: SlipstreamPortalChannel.SlipstreamPortalChannel(unit, Int32, Point)
+- uid: MacroTools.Spells.Slipstream.SlipstreamPortalChannel.#ctor(unit,System.Int32,Point,Point)
+  name: SlipstreamPortalChannel(unit, Int32, Point, Point)
+  href: api-macroTools/MacroTools.Spells.Slipstream.SlipstreamPortalChannel.html#MacroTools_Spells_Slipstream_SlipstreamPortalChannel__ctor_unit_System_Int32_Point_Point_
+  commentId: M:MacroTools.Spells.Slipstream.SlipstreamPortalChannel.#ctor(unit,System.Int32,Point,Point)
+  fullName: MacroTools.Spells.Slipstream.SlipstreamPortalChannel.SlipstreamPortalChannel(unit, System.Int32, Point, Point)
+  nameWithType: SlipstreamPortalChannel.SlipstreamPortalChannel(unit, Int32, Point, Point)
 - uid: MacroTools.Spells.Slipstream.SlipstreamPortalChannel.#ctor*
   name: SlipstreamPortalChannel
   href: api-macroTools/MacroTools.Spells.Slipstream.SlipstreamPortalChannel.html#MacroTools_Spells_Slipstream_SlipstreamPortalChannel__ctor_
@@ -15928,19 +15928,6 @@ references:
   isSpec: "True"
   fullName: MacroTools.Spells.Slipstream.SlipstreamPortalChannel.OpeningDelay
   nameWithType: SlipstreamPortalChannel.OpeningDelay
-- uid: MacroTools.Spells.Slipstream.SlipstreamPortalChannel.PortalOffset
-  name: PortalOffset
-  href: api-macroTools/MacroTools.Spells.Slipstream.SlipstreamPortalChannel.html#MacroTools_Spells_Slipstream_SlipstreamPortalChannel_PortalOffset
-  commentId: P:MacroTools.Spells.Slipstream.SlipstreamPortalChannel.PortalOffset
-  fullName: MacroTools.Spells.Slipstream.SlipstreamPortalChannel.PortalOffset
-  nameWithType: SlipstreamPortalChannel.PortalOffset
-- uid: MacroTools.Spells.Slipstream.SlipstreamPortalChannel.PortalOffset*
-  name: PortalOffset
-  href: api-macroTools/MacroTools.Spells.Slipstream.SlipstreamPortalChannel.html#MacroTools_Spells_Slipstream_SlipstreamPortalChannel_PortalOffset_
-  commentId: Overload:MacroTools.Spells.Slipstream.SlipstreamPortalChannel.PortalOffset
-  isSpec: "True"
-  fullName: MacroTools.Spells.Slipstream.SlipstreamPortalChannel.PortalOffset
-  nameWithType: SlipstreamPortalChannel.PortalOffset
 - uid: MacroTools.Spells.Slipstream.SlipstreamPortalChannel.PortalUnitTypeId
   name: PortalUnitTypeId
   href: api-macroTools/MacroTools.Spells.Slipstream.SlipstreamPortalChannel.html#MacroTools_Spells_Slipstream_SlipstreamPortalChannel_PortalUnitTypeId
@@ -16074,6 +16061,19 @@ references:
   isSpec: "True"
   fullName: MacroTools.Spells.Slipstream.SlipstreamSpell.OpeningDelay
   nameWithType: SlipstreamSpell.OpeningDelay
+- uid: MacroTools.Spells.Slipstream.SlipstreamSpell.PortalOffset
+  name: PortalOffset
+  href: api-macroTools/MacroTools.Spells.Slipstream.SlipstreamSpell.html#MacroTools_Spells_Slipstream_SlipstreamSpell_PortalOffset
+  commentId: P:MacroTools.Spells.Slipstream.SlipstreamSpell.PortalOffset
+  fullName: MacroTools.Spells.Slipstream.SlipstreamSpell.PortalOffset
+  nameWithType: SlipstreamSpell.PortalOffset
+- uid: MacroTools.Spells.Slipstream.SlipstreamSpell.PortalOffset*
+  name: PortalOffset
+  href: api-macroTools/MacroTools.Spells.Slipstream.SlipstreamSpell.html#MacroTools_Spells_Slipstream_SlipstreamSpell_PortalOffset_
+  commentId: Overload:MacroTools.Spells.Slipstream.SlipstreamSpell.PortalOffset
+  isSpec: "True"
+  fullName: MacroTools.Spells.Slipstream.SlipstreamSpell.PortalOffset
+  nameWithType: SlipstreamSpell.PortalOffset
 - uid: MacroTools.Spells.Slipstream.SlipstreamSpell.PortalUnitTypeId
   name: PortalUnitTypeId
   href: api-macroTools/MacroTools.Spells.Slipstream.SlipstreamSpell.html#MacroTools_Spells_Slipstream_SlipstreamSpell_PortalUnitTypeId
@@ -16171,19 +16171,6 @@ references:
   isSpec: "True"
   fullName: MacroTools.Spells.Slipstream.SlipstreamSpellSpecificLocation.OpeningDelay
   nameWithType: SlipstreamSpellSpecificLocation.OpeningDelay
-- uid: MacroTools.Spells.Slipstream.SlipstreamSpellSpecificLocation.PortalOffset
-  name: PortalOffset
-  href: api-macroTools/MacroTools.Spells.Slipstream.SlipstreamSpellSpecificLocation.html#MacroTools_Spells_Slipstream_SlipstreamSpellSpecificLocation_PortalOffset
-  commentId: P:MacroTools.Spells.Slipstream.SlipstreamSpellSpecificLocation.PortalOffset
-  fullName: MacroTools.Spells.Slipstream.SlipstreamSpellSpecificLocation.PortalOffset
-  nameWithType: SlipstreamSpellSpecificLocation.PortalOffset
-- uid: MacroTools.Spells.Slipstream.SlipstreamSpellSpecificLocation.PortalOffset*
-  name: PortalOffset
-  href: api-macroTools/MacroTools.Spells.Slipstream.SlipstreamSpellSpecificLocation.html#MacroTools_Spells_Slipstream_SlipstreamSpellSpecificLocation_PortalOffset_
-  commentId: Overload:MacroTools.Spells.Slipstream.SlipstreamSpellSpecificLocation.PortalOffset
-  isSpec: "True"
-  fullName: MacroTools.Spells.Slipstream.SlipstreamSpellSpecificLocation.PortalOffset
-  nameWithType: SlipstreamSpellSpecificLocation.PortalOffset
 - uid: MacroTools.Spells.Slipstream.SlipstreamSpellSpecificLocation.PortalUnitTypeId
   name: PortalUnitTypeId
   href: api-macroTools/MacroTools.Spells.Slipstream.SlipstreamSpellSpecificLocation.html#MacroTools_Spells_Slipstream_SlipstreamSpellSpecificLocation_PortalUnitTypeId
